--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -259,7 +259,17 @@ Export dataset to a file or output stream can be done by calling `api/write-csv!
 
 ```{clojure}
 (api/write-csv! ds "output.tsv.gz")
-(.exists (clojure.java.io/file "output.csv.gz"))
+(.exists (clojure.java.io/file "output.tsv.gz"))
+```
+
+##### Nippy
+
+```{clojure}
+(api/write-nippy! DS "output.nippy.gz")
+```
+
+```{clojure results="asis"}
+(api/read-nippy "output.nippy.gz")
 ```
 
 #### Dataset related functions
@@ -976,7 +986,7 @@ To add (or replace existing) column call `add-or-replace-column` function. Funct
 * `column-name` - if it's existing column name, column will be replaced
 * `column` - can be column (from other dataset), sequence, single value or function. Too big columns are always trimmed. Too small are cycled or extended with missing values (according to `size-strategy` argument)
 * `size-strategy` (optional) - when new column is shorter than dataset row count, following strategies are applied:
-    - `:cycle` (default) - repeat data
+- `:cycle` (default) - repeat data
     - `:na` - append missing values
     - `:strict` - throws an exception when sizes mismatch
 
@@ -1976,10 +1986,28 @@ Lerp tries to apply linear interpolation of the values
 Lerp works also on dates
 
 ```{clojure results="asis"}
-(-> (api/dataset {:dt [(java.time.LocalDateTime/of 2020 1 1 11 22 33)
-                       nil nil nil nil nil nil nil
-                       (java.time.LocalDateTime/of 2020 10 1 1 1 1)]})
-    (api/replace-missing :lerp))
+(comment (-> (api/dataset {:dt [(java.time.LocalDateTime/of 2020 1 1 11 22 33)
+                                nil nil nil nil nil nil nil
+                                (java.time.LocalDateTime/of 2020 10 1 1 1 1)]})
+             (api/replace-missing :lerp)))
+```
+
+#### Inject
+
+When your column contains not continuous data range you can fill up with lacking values. Arguments:
+
+* dataset
+* column name
+* expected step (`max-span`, milliseconds in case of datetime column)
+* (optional) `missing-strategy` - how to replace missing, default `:down` (set to `nil` if none)
+* (optional) `missing-value` - optional value for replace missing
+
+---
+
+```{clojure results="asis"}
+(-> (api/dataset {:a [1 2 9]
+                  :b [:a :b :c]})
+    (api/fill-range-replace :a 1))
 ```
 
 ### Join/Separate Columns
