--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -17,7 +17,7 @@ output:
     pdf_document:
         highlight: tango
     md_document:
-        variant: markdown_github
+        variant: gfm
 ---
 
 ```{css echo=FALSE}
@@ -25,7 +25,7 @@ output:
 table { width: auto !important; margin-right: auto; margin-left: 2%; }
 h1, h2, h3, h4, h5, h6 { padding-top: 16px; border-bottom: 1px solid; }
 pre.sourceCode { position: relative; }
-code.clojure::before {
+pre.clojure::before {
     content: "Clojure";
     opacity: 0.2;
     font-size: 150%;
@@ -34,7 +34,7 @@ code.clojure::before {
     right: 8px;
     bottom: 0px;
 }
-code.r::before {
+pre.r::before {
     content: "R";
     opacity: 0.2;
     font-size: 150%;
